<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/ic_prepare"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_prepared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prepare_time"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button"
                android:onClick="onClick"/>

            <TextView
                android:id="@+id/tv_prepare_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_prepare_time"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.55"
            android:src="@mipmap/ic_workout"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_workout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_time"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button"
                android:onClick="onClick"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_workout_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_minutes"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tv_workout_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_seconds"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.55"
            android:src="@mipmap/ic_break"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="break time"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button"
                android:onClick="onClick"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_break_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_minutes"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tv_break_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_seconds"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.76"
            android:src="@mipmap/ic_cycles"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_rounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_rounds"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button"
                android:onClick="onClick"/>

            <TextView
                android:id="@+id/tv_rounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rounds"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>

        </LinearLayout>

    </LinearLayout>
    
    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_start"
        android:layout_margin="11dp"
        android:textColor="@android:color/white"
        android:textSize="38sp"
        android:background="@drawable/custom_button"
        android:onClick="onClick"/>

</LinearLayout>