<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCountdown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/tv_countdown"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="110sp"
            android:background="@drawable/shape_for_start_textviews"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/shape_for_start_textviews">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:text="Rounds"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/tv_rounds"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_how_many_rounds"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_stop_resume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/btn_stop_resume"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:background="@drawable/custom_button_stop"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="0.5"
            android:layout_margin="8dp"
            android:background="@drawable/shape_for_start_textviews">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Training time: "
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <Chronometer
                android:id="@+id/chronomet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>